# jira-backup-py

./: .gitignore  CODEOWNERS  Dockerfile  LICENSE  README.md  backup.py  config.json  config.yaml  pyproject.toml  requirements.txt  win_task_wrapper.bat  wizard.py
.github/workflows/: docker-image.yml  python-wheel.yml
src/jira_backup/: __init__.py  __main__.py  backup.py  wizard.py
